# arugula

./: Cargo.toml  README.md  Rocket.toml
src/: main.rs  models.rs
templates/: index.html.tera
