[package]
name = "arugula"
version = "0.1.0"
authors = ["William Lohrmann <wlohrmann@oni.bio>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
rusqlite = "0.14.0"
serde = { version = "1.0.116", features = ["derive"] }

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["sqlite_pool", "tera_templates"]
